fixed modal issue on mobile
moved the modal component up and lifted state via props through two levels of components by calling handler functions

--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@
 .fullscreen{
  width: 100vw;
  height: 100vh;
- background-color: rgba(0, 0, 0, 0.8);
+ background-color: white;
  position: fixed;
  top: 0px;
  left: 0px;
@@ -127,10 +127,10 @@ z-index: 1000;
 .photo{
   position: relative;
   margin: 0 auto;
-  /*transform: translateY(-30%);*/
-  transform: translate(-50%, 30%);
+  top: 10vh;
+  transform: translateX(-50%);
   left: 50%;
-  max-width: 100vw;
+  max-width: 70vw;
 
 }
 
@@ -148,7 +148,7 @@ z-index: 1000;
 
 .close-btn{
   position: relative;
-  top: 10vh;
+  top: 5vh;
   transform: translate(-50%, 30%);
   left: 50%;
   z-index: 110;
